<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gish</string>
    <string name="version">v1.2 | 01-MAR-2018</string>
    <string name="icon_string">Gish icon</string>
    <string name="about_string">Original game was developed by:\n• © 2004-2017 Cryptic Sea.\n\nPublished by:\n• © 2004 Chronic Logic;\n• © 2005 Stardock;\n• © 2007 Steam.\n\nBuy Gish (data files):\nhttp://www.chroniclogic.com/gishorder.htm\nhttp://store.steampowered.com/app/9500\n\nPorting to Android OS native application with using SDL2, OpenAL, Ogg Vorbis, GL4ES and OpenGL ES libraries:\n• © 2017 S. \"EXL\" KLS\nemail: exl@bk.ru\nemail: exlmotodev@gmail.com\n\nSource Code:\nhttps://github.com/EXL/Gish\n\nArticle About Porting Gish:\nhttp://exlmoto.ru/gish-droid\n\nThanks to:\n• [SoD]Thor for touch joystick;\n• Pickle for OpenGL ES render;\n• ptitSeb for GL4ES wrapper library;\n• SysLord for some Gish patches;\n• blinry for Gish source code repository;\n• VatsOfGoo for help and data files;\n• Solexid for simple file picker code;\n• GNOME Adwaita team for some icons;\n• Egor Bukhamer for getting to know Gish;\n• Danil Medvedev for playing to Gish with me;\n• MaximuM FaziL for Russian translation;\n• J()KER for testing APK-package;\n• Zorge.R for hosting, patience and help.\n\nThe release is dedicated to the 14th anniversary of the http://motofan.ru resource!</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="icon">Icon</string>
    <string name="cover_string">Gish Cover Art</string>
    <string name="button_run">Run Gish!</string>
    <string name="button_browse">Browse files...</string>
    <string name="label_path">Path to the folder w/ cache of game data:</string>
    <string name="editText_hint">Please select folder by \"Browse files...\" button</string>
    <string name="label_settings">General Settings</string>
    <string name="music">Music</string>
    <string name="sound">Sound</string>
    <string name="show_fps">Show FPS</string>
    <string name="joy_accel">Joystick (Accelerometer)</string>
    <string name="off_border">Disable borders</string>
    <string name="fix_cache">Fix cache</string>
    <string name="touch_settings">Touch Controls Settings</string>
    <string name="touchscreen_modern">Modern</string>
    <string name="touchscreen_simple">Simple</string>
    <string name="touchscreen_off">Off</string>
    <string name="render_settings">Render Settings</string>
    <string name="gles">OpenGL ES</string>
    <string name="lights">GFX Lights</string>
    <string name="shadows">GFX Shadows</string>
    <string name="gl4es">OpenGL via GL4ES</string>
    <string name="other_settings">Haptics &amp; Other Settings</string>
    <string name="vibro_scale">Vibration:</string>
    <string name="vibro_scale_default">30</string>
    <string name="vibro_ms">ms</string>
    <string name="vibro_on_touch">On touch</string>
    <string name="vibro_in_game">In game</string>
    <string name="button_about">About Gish...</string>
    <string name="reset_settings">Reset Game...</string>
    <string name="no_items">No items</string>
    <string name="item">item</string>
    <string name="items">items</string>
    <string name="parent_dir">Parent Directory</string>
    <string name="wrong_haptic_title">Wrong Haptics Parameter!</string>
    <string name="wrong_haptic_body">Please check the Haptics parameter.</string>
    <string name="wrong_zoom_title">Wrong Zoom Parameter!</string>
    <string name="wrong_zoom_body">Please check the Zoom parameter.</string>
    <string name="wrong_body_general">Excess values are unacceptable.</string>
    <string name="question_title_general">Are you sure?</string>
    <string name="question_reset_body">Are you sure want to reset all settings to default values and delete Gish config and profile?</string>
    <string name="gish_data">Please choose Gish folder:</string>
    <string name="zoom">Zoom scale:</string>
    <string name="zoom_default">10.0</string>
    <string name="data_path_c">Directory with Gish data files is chosen!</string>
    <string name="data_path_wrong">Error! Please check the Gish directory!</string>
    <string name="reset_game">Settings and profile have been reset!</string>
</resources>
